# embedded-rust-examples

./: .gitignore  LICENSE  README.md  discharge-time-to-capacitance.py  first-rust-app-after-toolchain-installed.md  intro-links-for-external-sites.md  linux-install.md  readme.md  research.md  time-to-discharge-capacitor.py  windows-wsl-install
ex-gpio-change-pin-direction-var-cap-read-1-pin/: Capacitive-Fluid-Level-Sensor-schematic.epro  Cargo.toml  readme.md  sdkconfig.defaults
ex-gpio-change-pin-direction-var-cap-read-1-pin/arduino-pin-direction-example/: arduino-pin-direction-example.ino
ex-gpio-change-pin-direction-var-cap-read-1-pin/src/: main.rs
ex-gpio-measure-time-to-change-high-to-low/: Cargo.toml  readme.md
ex-gpio-measure-time-to-change-high-to-low/src/: main.rs
ex-led-on-off/: Cargo.toml  readme.md
ex-led-on-off/src/: main.rs
ex-uart-echo-rs485/: Cargo.toml  readme.md
ex-uart-echo-rs485/src/: main.rs
ex-uart-non-block-rs485/: readme.md
ex-uart-non-block-rs485/src/: main.rs
